# app-fastapi

./: .gitignore  DockerFile  pyproject.toml
.github/workflows/: ci.yaml
app_fastapi/: main.py  settings.py
tests/: test_status.py
